[package]
name = "mail-server"
description = "Stalwart Mail Server"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/jmap-server"
homepage = "https://stalw.art"
keywords = ["imap", "jmap", "smtp", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only"
version = "0.3.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "stalwart-mail"
path = "crates/main/src/main.rs"

[dependencies]
store = { path = "crates/store" }
jmap = { path = "crates/jmap" }
jmap_proto = { path = "crates/jmap-proto" }
smtp = { path = "crates/smtp", features = ["local_delivery"] }
directory = { path = "crates/directory" }
utils = { path = "crates/utils" }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[features]
default = ["sqlite"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation"]

[workspace]
members = [
    "crates/jmap",
    "crates/jmap-proto",
    "crates/imap",
    "crates/imap-proto",
    "crates/smtp",
    "crates/store",
    "crates/directory",
    "crates/utils",
    "crates/maybe-async",
    "tests",
]
