[package]
name = "tests"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
#default = ["sqlite", "foundationdb", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation"]
postgres = ["store/postgres"]
mysql = ["store/mysql"]
rocks = ["store/rocks"]
elastic = ["store/elastic"]
s3 = ["store/s3"]
redis = ["store/redis"]

[dev-dependencies]
store = { path = "../crates/store", features = ["test_mode"] }
nlp = { path = "../crates/nlp" }
directory = { path = "../crates/directory" }
jmap = { path = "../crates/jmap", features = ["test_mode"] }
jmap_proto = { path = "../crates/jmap-proto" }
imap = { path = "../crates/imap", features = ["test_mode"] }
imap_proto = { path = "../crates/imap-proto" }
smtp = { path = "../crates/smtp", features = ["test_mode", "local_delivery"] }
managesieve = { path = "../crates/managesieve", features = ["test_mode"] }
smtp-proto = { version = "0.1" }
mail-send = { version = "0.4", default-features = false, features = ["cram-md5", "skip-ehlo"] }
mail-auth = { version = "0.3", features = ["test"] }
sieve-rs = { version = "0.4" } 
utils = { path = "../crates/utils", features = ["test_mode"] }
jmap-client = { version = "0.3", features = ["websockets", "debug", "async"] } 
mail-parser = { version = "0.9", features = ["full_encoding", "serde_support", "ludicrous_mode"] } 
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = { version = "0.25.0"}
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-pki-types = { version = "1" }
csv = "1.1"
rayon = { version = "1.5.1" }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "multipart"]}
bytes = "1.4.0"
futures = "0.3"
ece = "2.2"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
base64 = "0.21"
dashmap = "5.4"
ahash = { version = "0.8" }
serial_test = "2.0.0"
num_cpus = "1.15.0"
async-trait = "0.1.68"
chrono = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
