[package]
name = "benchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
roaring = "0.10.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bitmap"
harness = false
