[package]
name = "directory"
version = "0.11.8"
edition = "2024"
resolver = "2"

[dependencies]
utils = { path =  "../utils" }
proc_macros = { path =  "../utils/proc-macros" }
store = { path =  "../store" }
trc = { path = "../trc" }
nlp = { path = "../nlp" }
jmap_proto = { path =  "../jmap-proto" }
smtp-proto = { version = "0.1" }
mail-parser = { version = "0.11", features = ["full_encoding", "rkyv"] } 
mail-send = { version = "0.5", default-features = false, features = ["cram-md5", "ring", "tls12"] }
mail-builder = { version = "0.4" }
tokio = { version = "1.23", features = ["net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = { version = "1" }
ldap3 = { version = "0.11.1", default-features = false, features = ["tls-rustls"] }
deadpool = { version = "0.10", features = ["managed", "rt_tokio_1"] }
async-trait = "0.1.68"
ahash = { version = "0.8" }
pwhash = "1"
password-hash = "0.5.0"
argon2 = "0.5.0"
pbkdf2 = {version = "0.12.1", features = ["simple"] }
scrypt = "0.11.0"
sha1 = "0.10.5"
sha2 = "0.10.6"
md5 = "0.7.0"
futures = "0.3"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"]}
totp-rs = { version = "5.5.1", features = ["otpauth"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"] }
serde_json = "1.0"
base64 = "0.22"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }

[features]
test_mode = []
enterprise = []
