[package]
name = "groupware"
version = "0.11.5"
edition = "2024"
resolver = "2"

[dependencies]
utils = { path = "../utils" }
common = { path =  "../common" }
jmap_proto = { path =  "../jmap-proto" }
trc = { path = "../trc" }
directory = { path =  "../directory" }
dav-proto = { path =  "/Users/me/code/dav-proto" }
calcard = { path =  "/Users/me/code/calcard" }
hashify = "0.2"
rkyv = { version = "0.8.10", features = ["little_endian"] }
percent-encoding = "2.3.1"

[features]
test_mode = []
enterprise = []

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }
