[package]
name = "http"
version = "0.11.5"
edition = "2024"
resolver = "2"

[dependencies]
store = { path = "../store" }
common = { path =  "../common" }
utils = { path =  "../utils" }
trc = { path = "../trc" }
email = { path = "../email" }
smtp = { path = "../smtp" }
jmap = { path = "../jmap" }
spam-filter = { path = "../spam-filter" }
http_proto = { path = "../http-proto" }
jmap_proto = { path = "../jmap-proto" }
directory = { path =  "../directory" }
services = { path =  "../services" }
smtp-proto = { version = "0.1" }
mail-parser = { version = "0.10", features = ["full_encoding", "serde_support"] } 
mail-builder = { version = "0.4" }
mail-auth = { version = "0.6", features = ["generate"] }
mail-send = { version = "0.5", default-features = false, features = ["cram-md5", "ring", "tls12"] }
tokio = { version = "1.23", features = ["rt"] }
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
async-stream = "0.3.5"
quick-xml = "0.37"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
x509-parser = "0.16.0"
chrono = "0.4"
base64 = "0.22"
pkcs8 = { version = "0.10.2", features = ["alloc", "std"] }
rsa = "0.9.2"
sha1 = "0.10"
sha2 = "0.10"
rev_lines = "0.3.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
form-data = { version = "0.6.0", features = ["sync"], default-features = false }
mime = "0.3.17"

[dev-dependencies]

[features]
test_mode = []
enterprise = []
